<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddStoryActivity">

    <ImageView
        android:id="@+id/add_img"
        android:layout_width="167dp"
        android:layout_height="162dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <EditText
        android:id="@+id/add_desc"
        android:layout_width="370dp"
        android:layout_height="171dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/desc_input"
        android:gravity="top"
        android:hint="@string/desc_hint"
        android:inputType="textImeMultiLine"
        android:lines="5"

        android:maxLines="8"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galery_btn" />

    <Button
        android:id="@+id/camera_btn"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_img" />

    <Button
        android:id="@+id/galery_btn"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/galery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/camera_btn"
        app:layout_constraintTop_toBottomOf="@+id/add_img" />

    <Button
        android:id="@+id/upload_btn"
        android:layout_width="370dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_desc" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>