<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cl_action"
    tools:context=".activity.LoginActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="312dp"
        android:layout_height="93dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/regis_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <EditText
        android:id="@+id/ed_register_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_input"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regis_text" />

    <com.dicoding.submission.dicodingintermediatesubmission.customview.Email
        android:id="@+id/ed_register_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_input"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/prompt_email"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_name" />

    <com.dicoding.submission.dicodingintermediatesubmission.customview.Password
        android:id="@+id/ed_register_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_input"
        android:drawableStart="@drawable/ic_baseline_password_24"
        android:drawablePadding="10dp"
        android:hint="@string/prompt_password"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email" />

    <Button
        android:id="@+id/btnRegis"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/register"
        android:textColor="@color/cl_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ed_register_password"
        app:layout_constraintStart_toStartOf="@+id/ed_register_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password"
        app:layout_constraintVertical_bias="0.153" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>